correction: au niveau du pop-up les éléments sont alignés et centrer (les un en dessous des autres)

--- a/css/modal_box.css
+++ b/css/modal_box.css
@@ -67,7 +67,13 @@ a .close:target {
   position: relative;
   display: flex;
   justify-content: center;
-  top: 50%;
+  align-items: center;
+  flex-direction: column;
+  top: 40%;
+}
+
+#container-info{
+  margin-top: 30px;
 }
 
 
